# LilParsers

./: BookPrint.hs  GangliaParse.hs  LunchParse.hs  MemParse.hs  MonitParse.hs  WeatherParse.hs  lilparsers.cabal  package.yaml  stack.yaml
app/: BookPrint.hs  LunchParse.hs  MemParse.hs  MonitParse.hs  WeatherParse.hs
src/: GangliaParse.hs
