name: lilparsers
version: 0.1
build-type: Simple
cabal-version: >=1.18

library
  default-language: Haskell2010
  build-depends: base
               , aeson
               , containers
  exposed-modules: GangliaParse

executable LunchParse
  main-is: LunchParse.hs
  default-language: Haskell2010
  build-depends: base
               , hxt
               , hxt-curl
               , text

executable WeatherParse
  main-is: WeatherParse.hs
  default-language: Haskell2010
  build-depends: base
               , hxt
               , hxt-curl
               , text

executable MonitParse
  main-is: MonitParse.hs
  default-language: Haskell2010
  build-depends: base
               , text
               , containers
               , http-conduit
               , bytestring
               , aeson

executable MemParse
  main-is: MemParse.hs
  default-language: Haskell2010
  build-depends: base
               , text
               , containers
               , http-conduit
               , bytestring
               , aeson
               , formatting

executable BookPrint
  main-is: BookPrint.hs
  default-language: Haskell2010
  build-depends: base
               , text
               , bytestring
               , directory
               , filemanip
               , random-fu
               , random-source
               , random-extras
               , utf8-string
               , transformers

