name: lilparsers
version: 0.1
build-type: Simple
cabal-version: >=1.18

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , containers
  exposed-modules:     GangliaParse

executable LunchParse
  hs-source-dirs:      app
  main-is:             LunchParse.hs
  build-depends:       base
                     , hxt
                     , hxt-curl
                     , text
  default-language:    Haskell2010

executable WeatherParse
  hs-source-dirs:      app
  main-is:             WeatherParse.hs
  build-depends:       base
                     , hxt
                     , hxt-curl
                     , text
  default-language:    Haskell2010

executable MonitParse
  hs-source-dirs:      app
  main-is:             MonitParse.hs
  build-depends:       base
                     , text
                     , containers
                     , http-conduit
                     , bytestring
                     , aeson
                     , lilparsers
  default-language:    Haskell2010

executable MemParse
  hs-source-dirs:      app
  main-is:             MemParse.hs
  build-depends:       base
                     , text
                     , containers
                     , http-conduit
                     , bytestring
                     , aeson
                     , formatting
                     , lilparsers
  default-language:    Haskell2010

executable BookPrint
  hs-source-dirs:      app
  main-is:             BookPrint.hs
  build-depends:       base
                     , text
                     , bytestring
                     , directory
                     , filemanip
                     , random-fu
                     , random-source
                     , random-extras
                     , utf8-string
                     , transformers
  default-language:    Haskell2010

